--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -104,7 +104,7 @@ p {
     max-width: 150px;
 }
 
-.content div {
+.content article{
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
